--- a/index.html
+++ b/index.html
@@ -21,17 +21,12 @@
             <a class="navbar-brand" href="#">Arapoti</a>
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading1">Opções</a>
+                    <a class="nav-link" href="#scrollspyHeading1">Arapoti</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading2">História</a>
+                    <a class="nav-link" href="#scrollspyHeading2">Receitas</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading3">Ferramentas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading4">Projetos</a>
-                </li>
+                
                 <!-- comentário -->
             </ul>
         </nav>
@@ -50,7 +45,7 @@
             <!-- titulo e apresentação -->
             <section id="scrollspyHeading1" class="mt-5">
                 <div class="text-center mt-5">
-                    <img src="image/Arapoti.png" height="150px" width="150px" alt="...">
+                    <img src="image/Arapoti.png" height="150px" width="150px" alt="berl">
                 </div>
                 <div class="container-fluid">
                     <h1 class="text-center mt-1">
@@ -64,13 +59,13 @@
 
             <!-- menu -->
 
-            <section>
+            <section id="scrollspyHeading2">
                 <div class="container">
                     <div class="row d-flex justify-content-center">
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_1couveParmegiana.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Parmegiana de Couve-flor</p>
                                     </div>
@@ -80,7 +75,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_2GratinadoDeNabo.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/GratinadoDeNabo.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/GratinadoDeNabo.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Gratinado de Nabo</p>
                                     </div>
@@ -90,7 +85,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_3RisotoDePrimentaDeCheiro.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/Risoto.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/Risoto.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Risoto de Pimenta de Cheiro</p>
                                     </div>
@@ -100,7 +95,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_4QuicheDeAlhoPoro.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/QuicheAlho.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/QuicheAlho.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Quiche de Alho-Poró</p>
                                     </div>
@@ -110,7 +105,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_5LasanhaDeBerinjela.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/lasanhaDeBeringela.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/lasanhaDeBeringela.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Lasanha de Berinjela</p>
                                     </div>
@@ -120,7 +115,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_6DoceDeAbobora.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/doceDeAbobora.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/doceDeAbobora.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Doce de Abóbora com Coco</p>
                                     </div>
@@ -130,7 +125,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_7PaoDeBatataDoce.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/PaoDoce.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/PaoDoce.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Pão de Batata Doce</p>
                                     </div>
@@ -140,7 +135,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_8RaviolliRecheado.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/reviooli.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/reviooli.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Ravioli Recheado</p>
                                     </div>
@@ -150,7 +145,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_9tortinhaDeFolhaDeMostarda.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/tortilhaDeFolha.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/tortilhaDeFolha.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Tortinha de Folha de Mostarda</p>
                                     </div>
@@ -160,7 +155,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_10AlmeiraoComArrozBranco.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/Almeirao.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/Almeirao.jpeg" class="card-img-top" alt="..." style="width: 400px; height: 300px;">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Almeirão com Arroz Branco</p>
                                     </div>
@@ -170,7 +165,7 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_11NaboERabanete.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/NaboeRabaneteAssadocomMolhodeErvas.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/NaboeRabaneteAssadocomMolhodeErvas.jpeg" style="width: 400px; height: 300px;" class="card-img-top" alt="...">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Nabo e Rabanete Assado</p>
                                     </div>
