--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </main>
     <footer>
         <!-- Footer -->
-        <footer class="bg-dark text-center text-white">
+        <footer class="bg-dark text-center text-white mt-5">
             <!-- Grid container -->
             <div class="container p-4">
                 <!-- Section: Social media -->
